src/test/deca/context/valid/provided/ContextSansObjet/OperationsArithmetiques/DivideFloatInt.deca
//Description :
//	Vérification contextuelle de l'opérateur / avec des variables float et int
//
//Résultats :
//	ok

{
    float x = 2.3/3;
    int y = 3;
    float z = x/y;
}