src/test/deca/context/invalid/ContextSansObjet/OperationsUnaires/MinusInt_Boolean.deca
//Description:
//  Vérification contextuelle du type de sortie non int de l'opérateur unaire -
//Résultat:
//  Erreur contextuelle
//  ligne 8 : type incompatible

{
   boolean x = -3;
}